# yugioh-deck-generator

./: .env.mlflow-tunnel.example  .gitignore  .gitmodules  ARCHITECTURE.md  Dockerfile  Makefile  README.md  WORKFLOW_ANALYSIS.md  docker-compose.local-mlflow.yml  fix_aws_env.sh  justfile  pyproject.toml  test_mlflow_integration.py
.cache/numba/pynndescent_70935941ba4a5df383c4094f8fd5b6a45990de8c/: rp_trees.angular_bitpacked_random_projection_split-174.py311.1.nbc  rp_trees.angular_bitpacked_random_projection_split-174.py311.nbi  rp_trees.angular_random_projection_split-41.py311.1.nbc  rp_trees.angular_random_projection_split-41.py311.nbi  rp_trees.euclidean_random_projection_split-304.py311.1.nbc  rp_trees.euclidean_random_projection_split-304.py311.nbi  rp_trees.search_flat_bit_tree-2744.py311.1.nbc  rp_trees.search_flat_bit_tree-2744.py311.2.nbc  rp_trees.search_flat_bit_tree-2744.py311.nbi  rp_trees.search_flat_tree-2717.py311.1.nbc  rp_trees.search_flat_tree-2717.py311.2.nbc  rp_trees.search_flat_tree-2717.py311.nbi  rp_trees.select_side-2644.py311.1.nbc  rp_trees.select_side-2644.py311.2.nbc  rp_trees.select_side-2644.py311.nbi  rp_trees.select_side_bit-2680.py311.1.nbc  rp_trees.select_side_bit-2680.py311.2.nbc  (+37 more)
.github/workflows/: MIGRATION.md  README.md  ci.yml  clustering.yml  destroy.yml  eda.yml  infrastructure-deploy.yml  infrastructure-destroy-complete.yml  infrastructure-destroy.yml  infrastructure-full-destroy.yml  infrastructure-suspend.yml  mlflow-dev-deploy.yml  mlflow-k8s-deploy.yml  mlflow-prod-deploy.yml  mlflow-promote.yml  plan-and-apply.yml  pull_data.yml  terraform-infra.yml
.zenml/: config.yaml  credentials.yaml
card-cdb/: cards-rush.delta.cdb  cards-skills.delta.cdb  cards-unofficial.delta.cdb  cards.delta.cdb  cards.merged.report.txt
configs/generation/: formats.json  sampling_profiles.json  staple_pools.json
decks/known/: 2021_goat_format_deck.ydk  2023_Dragunity.ydk  Adventure Mikanko.ydk  Ancient Gear.ydk  Arcana Knights.ydk  BLUE-EYES DECK 2018.ydk  BLUE-EYES deck 2021.ydk  Banish deck.ydk  Black Luster Soldier Deck.ydk  Blackwing Deck 2021.ydk  Blackwing deck.ydk  Blue-Eyes 2022.ydk  Blue-Eyes Chaos MAX Dragon.ydk  Blue-Eyes Meta Deck 2020 , New Rules.ydk  Blue-Eyes White Dragon Deck.ydk  Blue-Eyes White Dragon GOAT.ydk  Blue-eyes Chaos Max Dragon DECK.ydk  Blue-eyes goat.ydk  Branded Despia.ydk  Branded Eldlich.ydk  Branded kashtira.ydk  Burn Deck.ydk  Buster Blader.ydk  CYBER DRAGON 1ST PLACE DECK.ydk  Crystal Beast.ydk  Crystal Beasts.ydk  Cyber Dragon Deck 2020.ydk  Danger Dark World.ydk  Dark Magician (via EDGE515) V0.2.ydk  Dark Magician 2017 (via Mina) V0.1.ydk  Dark Magician Deck 2018 TCG.ydk  Dark Magician Deck 2019.ydk  Dark Magician Deck 2020.ydk  Dark Magician GOAT.ydk  Dark Magician Girls.ydk  Dark Magician deck for Master Duel.ydk  Dark Magicians - GOAT.ydk  Dark Paladin Turbo.ydk  Dark World-Karma Cut Turbo.ydk  Destiny Board.ydk  (+94 more)
decks/novel/: deck_000_c503c6.ydk  deck_002_a22b01.ydk  deck_003_9915a2.ydk  deck_004_e1ad25.ydk  deck_005_44e876.ydk  deck_006_3e91c0.ydk  deck_007_25f350.ydk  deck_009_042422.ydk  deck_011_5d951b.ydk  deck_012_d747d0.ydk  deck_013_a6f0cc.ydk  deck_014_1c53e9.ydk  deck_018_59b1eb.ydk  deck_019_56d831.ydk  deck_021_3491d4.ydk  deck_022_417f2d.ydk  deck_023_a19013.ydk  deck_024_cd6724.ydk  deck_025_acb42c.ydk  deck_026_d4b981.ydk  deck_027_bb2fb3.ydk  deck_029_1b2587.ydk  deck_032_573873.ydk  deck_033_3361c9.ydk  deck_034_4113f5.ydk  deck_036_03a78b.ydk  deck_037_27c630.ydk  deck_038_ab3117.ydk  deck_040_c407aa.ydk  deck_041_81bece.ydk  deck_042_531017.ydk  deck_043_cea6b4.ydk  deck_045_e41362.ydk  deck_047_0078b6.ydk  deck_048_4dc749.ydk  deck_049_8e5f70.ydk  deck_050_fa0ba6.ydk  deck_051_cdf665.ydk  deck_052_1b9155.ydk  deck_053_915bb3.ydk  (+3277 more)
infra/docker/: docker-compose.yml
infra/iam/: policy.json
infra/k8s/mlflow/: pvc.yaml  (+8 more)
infra/terraform/: .terraform.lock.hcl  fix-subnets.tf  kms-policy.json  main.tf  plan.out  plan_output.txt  state-storage.tf.disbaled  terraform.tf  terraform.tfvars  variables.tf
mlruns/0/: meta.yaml
mlruns/359820861874380006/: meta.yaml
mlruns/830709615691958977/: meta.yaml
scripts/: cleanup-deleted-experiments.sh  fix_aws_env.sh  mlflow-local.sh
sh/: install_poetry.sh
src/data_acquisition/: pull_data.py
src/data_pull_api/: Dockerfile  pull_data.py
src/deck_generation/: __init__.py  deck_generator.py  generation.py
src/duel_simulation/: docker-compose.yml  real_duel_simulator.py  simulation.py
src/model/: clustering.py
src/utils/: clustering_metrics.py  clustering_metrics_summary.py  mlflow_utils.py  s3_utils.py
src/yugioh_deck_generator/: __init__.py  __main__.py
tests/: test_build_features.py  test_cluster_embeddings.py  test_generation_phase3.py  test_normalize_cards.py  test_scoring_phase4.py  test_scripts.py  test_simulation_phase5.py  test_sweep_hdbscan.py
tests/fixtures/: sample_ygoprodeck_cards.json
(+1895 files in other folders)
