[tool.poetry]
name = "yugioh-deck-generator"
version = "0.1.0"
description = "Environment Setup, Dependency Installation, and Metadata for yugioh-deck-generator"
authors = ["eric-castellanos <ericcastellanos229@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
sentence-transformers = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.pull_api.dependencies]
polars = "^1.30.0"
pygo-api = "^0.1.2"
boto3 = "^1.34.0"
urllib3 = "<1.27"

[tool.poetry.group.preprocessing.dependencies]
polars = "^1.30.0"
boto3 = "^1.34.0"
pandas = "1.5.3"
numba = "0.57.1"
numpy = "1.23.5"
ydata-profiling = "4.3.1"
s3fs = "^2025.5.1"
pyarrow = "^15.0.2"
matplotlib = "3.6.3"

[tool.poetry.group.clustering.dependencies]
# Core clustering algorithms
hdbscan = "^0.8.33"
scikit-learn = "^1.3.0"
umap-learn = "^0.5.4"

# Data processing and analysis
numpy = "^1.23.5"
pandas = "^1.5.3"
polars = "^1.30.0"
scipy = "^1.10.0"

# Visualization
matplotlib = "^3.6.3"
seaborn = "^0.12.0"

# MLflow for experiment tracking
mlflow = "^2.8.0"

# AWS integration
boto3 = "^1.34.0"

# Utilities
tqdm = "^4.65.0"
s3fs = "^2025.5.1"