[project]
name = "yugioh-deck-generator"
version = "0.1.0"
description = "Deterministic Yu-Gi-Oh! deck generation and evaluation system"
authors = [{ name = "Eric Castellanos", email = "eric@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "pydantic>=2.11.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pyarrow>=16.0.0,<20.0.0",
  "tqdm>=4.66.0,<5.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "redis>=5.0.0,<6.0.0",
  "openai>=1.0.0,<2.0.0",
]

[tool.poetry]
packages = [{ include = "yugioh_deck_generator", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.11.0"
black = "^25.1.0"
mypy = "^1.11.0"

[tool.poetry.group.mlops]
optional = true

[tool.poetry.group.mlops.dependencies]
zenml = ">=0.80.0,<0.90.0"
sentence-transformers = ">=3.0.0,<4.0.0"
mlflow = ">=2.14.0,<3.0.0"
hdbscan = ">=0.8.0,<0.9.0"
umap-learn = ">=0.5.0,<0.6.0"
optuna = ">=4.0.0,<5.0.0"
scikit-learn = ">=1.5.0,<2.0.0"
matplotlib = ">=3.9.0,<4.0.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["psycopg", "psycopg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["zenml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hdbscan", "umap", "mlflow", "sklearn", "matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tqdm", "tqdm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
